--- a/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/DiaryTableCell.xib
+++ b/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/DiaryTableCell.xib
@@ -3,35 +3,51 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="j75-S3-5h7" customClass="DiaryTableCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiaryTableCell" id="j75-S3-5h7" customClass="DiaryTableCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j75-S3-5h7" id="AWC-2c-hiU">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="31.12.2015 23:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBM-6n-lkI">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31.12.2015 23:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBM-6n-lkI">
                         <rect key="frame" x="8" y="12" width="151" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="151" id="UtK-FE-v8E"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="mmol/L" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zTB-Pb-k6G">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mmol/L" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zTB-Pb-k6G">
                         <rect key="frame" x="255" y="11" width="59" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="59" id="tzI-Ao-RxC"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="180/120" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MrB-m6-BaD">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="180/120" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MrB-m6-BaD">
                         <rect key="frame" x="167" y="12" width="80" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="tBM-6n-lkI" firstAttribute="baseline" secondItem="MrB-m6-BaD" secondAttribute="baseline" id="PS0-d9-yeH"/>
+                    <constraint firstItem="tBM-6n-lkI" firstAttribute="leading" secondItem="AWC-2c-hiU" secondAttribute="leadingMargin" id="Ram-yb-Hrd"/>
+                    <constraint firstItem="MrB-m6-BaD" firstAttribute="leading" secondItem="tBM-6n-lkI" secondAttribute="trailing" constant="8" symbolic="YES" id="gQG-vl-kji"/>
+                    <constraint firstItem="tBM-6n-lkI" firstAttribute="top" secondItem="AWC-2c-hiU" secondAttribute="topMargin" constant="4" id="k9y-lH-8DJ"/>
+                    <constraint firstItem="zTB-Pb-k6G" firstAttribute="centerY" secondItem="AWC-2c-hiU" secondAttribute="centerY" id="mIM-Cs-v2w"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="zTB-Pb-k6G" secondAttribute="trailing" constant="-2" id="s5u-oR-U6g"/>
+                    <constraint firstItem="zTB-Pb-k6G" firstAttribute="leading" secondItem="MrB-m6-BaD" secondAttribute="trailing" constant="8" symbolic="YES" id="tdV-pw-mDP"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateLabel" destination="tBM-6n-lkI" id="gSD-9A-BY5"/>
